feat: Carta Dinamica

--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MisGastos</title>
-    <link rel="stylesheet" href="bundle.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-</head>
+    <link rel="stylesheet" href="bundle.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
 
-<body>
+  <body>
+    <!--Carta de Partido-->
 
-  <!--Carta de Partido-->
-
-<div class="mdc-card mdc-card--outlined">
-  <div class="mdc-card-wrapper__text-section">
-    <div class="demo-card__title">🐳 Uruguay - Ghana</div>
-    <div class="demo-card__subhead">Martes 25 de diciembre</div>
-  </div>
-  <div class="mdc-card__actions">
-    <button class="mdc-button mdc-button--raised mdc-button--leading">
-      <span class="mdc-button__ripple"></span>
-      <i class="material-icons mdc-button__icon" aria-hidden="true"
-        >edit</i
-      >
-      <span class="mdc-button__label">Ingresar predicción</span>
-    </button>
-  </div>
-</div>
-<div class="mdc-card mdc-card--outlined">
-  <div class="mdc-card-wrapper__text-section">
-    <div class="demo-card__title">🐳 Uruguay - Ghana</div>
-    <div class="demo-card__subhead">Martes 25 de diciembre</div>
-  </div>
-  <div class="mdc-card__actions">
-    <button class="mdc-button mdc-button--raised mdc-button--leading">
-      <span class="mdc-button__ripple"></span>
-      <i class="material-icons mdc-button__icon" aria-hidden="true"
-        >edit</i
-      >
-      <span class="mdc-button__label">Ingresar predicción</span>
-    </button>
-  </div>
-</div>
-
-</body>
-
+    <div class="container">
+      <div class="mdc-card mdc-card--outlined">
+        <div class="mdc-card-wrapper__text-section">
+          <div class="demo-card__title">🐳 Uruguay - Ghana</div>
+          <div class="demo-card__subhead">Martes 25 de diciembre</div>
+        </div>
+        <div class="mdc-card__actions">
+          <button class="mdc-button mdc-button--raised mdc-button--leading">
+            <span class="mdc-button__ripple"></span>
+            <i class="material-icons mdc-button__icon" aria-hidden="true"
+              >edit</i
+            >
+            <span class="mdc-button__label">Ingresar predicción</span>
+          </button>
+        </div>
+      </div>
+      <div class="mdc-card mdc-card--outlined">
+        <div class="mdc-card-wrapper__text-section">
+          <div class="demo-card__title">🐳 Uruguay - Ghana</div>
+          <div class="demo-card__subhead">Martes 25 de diciembre</div>
+        </div>
+        <div class="mdc-card__actions">
+          <button class="mdc-button mdc-button--raised mdc-button--leading">
+            <span class="mdc-button__ripple"></span>
+            <i class="material-icons mdc-button__icon" aria-hidden="true"
+              >edit</i
+            >
+            <span class="mdc-button__label">Ingresar predicción</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
