--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -18,6 +18,188 @@
   </head>
 
   <body>
+    <!--Tabs-->
+
+    <div class="mdc-tab-bar" role="tablist">
+      <div class="mdc-tab-scroller">
+        <div
+          class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
+          style="margin-bottom: 0px"
+        >
+          <div class="mdc-tab-scroller__scroll-content">
+            <!---->
+            <button
+              role="tab"
+              class="mdc-tab mdc-tab--stacked"
+              aria-selected="false"
+              tabindex="-1"
+              id="goog_575636264-FIXED-0"
+            >
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon"
+                  ><!---->watch_later<!----></i
+                >
+
+                <span class="mdc-tab__text-label"><!---->Próximos<!----></span>
+              </span>
+
+              <span class="mdc-tab-indicator">
+                <span
+                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  style=""
+                ></span>
+              </span>
+
+              <span
+                class="mdc-tab__ripple mdc-ripple-upgraded"
+                style="
+                  --mdc-ripple-fg-size: 91px;
+                  --mdc-ripple-fg-scale: 1.96403;
+                  --mdc-ripple-fg-translate-start: 75px, -13.5px;
+                  --mdc-ripple-fg-translate-end: 30.7969px, -9.5px;
+                "
+              ></span>
+            </button>
+            <!---->
+            <button
+              role="tab"
+              class="mdc-tab mdc-tab--stacked mdc-tab--active"
+              aria-selected="true"
+              tabindex="0"
+              id="goog_575636264-FIXED-1"
+            >
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon"
+                  ><!---->near_me<!----></i
+                >
+
+                <span class="mdc-tab__text-label"
+                  ><!---->Resultados<!----></span
+                >
+              </span>
+
+              <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                <span
+                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  style=""
+                ></span>
+              </span>
+
+              <span
+                class="mdc-tab__ripple mdc-ripple-upgraded"
+                style="
+                  --mdc-ripple-fg-size: 93px;
+                  --mdc-ripple-fg-scale: 1.94767;
+                  --mdc-ripple-fg-translate-start: -45.5938px, -5.5px;
+                  --mdc-ripple-fg-translate-end: 31.125px, -10.5px;
+                "
+              ></span>
+            </button>
+            <!---->
+            <button
+              role="tab"
+              class="mdc-tab mdc-tab--stacked"
+              aria-selected="false"
+              tabindex="-1"
+              id="goog_575636264-FIXED-2"
+            >
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon"
+                  ><!---->favorite<!----></i
+                >
+
+                <span class="mdc-tab__text-label"><!---->Grupo<!----></span>
+              </span>
+
+              <span class="mdc-tab-indicator">
+                <span
+                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  style=""
+                ></span>
+              </span>
+
+              <span
+                class="mdc-tab__ripple mdc-ripple-upgraded"
+                style="
+                  --mdc-ripple-fg-size: 102px;
+                  --mdc-ripple-fg-scale: 1.90958;
+                  --mdc-ripple-fg-translate-start: -9.34375px, -11px;
+                  --mdc-ripple-fg-translate-end: 34.0859px, -15px;
+                "
+              ></span>
+            </button>
+            <!---->
+            <button
+              role="tab"
+              class="mdc-tab mdc-tab--stacked"
+              aria-selected="false"
+              tabindex="-1"
+              id="goog_575636264-FIXED-2"
+            >
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon"
+                  ><!---->favorite<!----></i
+                >
+
+                <span class="mdc-tab__text-label"><!---->Canje<!----></span>
+              </span>
+
+              <span class="mdc-tab-indicator">
+                <span
+                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  style=""
+                ></span>
+              </span>
+
+              <span
+                class="mdc-tab__ripple mdc-ripple-upgraded"
+                style="
+                  --mdc-ripple-fg-size: 102px;
+                  --mdc-ripple-fg-scale: 1.90958;
+                  --mdc-ripple-fg-translate-start: -9.34375px, -11px;
+                  --mdc-ripple-fg-translate-end: 34.0859px, -15px;
+                "
+              ></span>
+            </button>
+            <!---->
+            <button
+              role="tab"
+              class="mdc-tab mdc-tab--stacked"
+              aria-selected="false"
+              tabindex="-1"
+              id="goog_575636264-FIXED-2"
+            >
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon"
+                  ><!---->favorite<!----></i
+                >
+
+                <span class="mdc-tab__text-label"><!---->Perfil<!----></span>
+              </span>
+
+              <span class="mdc-tab-indicator">
+                <span
+                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
+                  style=""
+                ></span>
+              </span>
+
+              <span
+                class="mdc-tab__ripple mdc-ripple-upgraded"
+                style="
+                  --mdc-ripple-fg-size: 102px;
+                  --mdc-ripple-fg-scale: 1.90958;
+                  --mdc-ripple-fg-translate-start: -9.34375px, -11px;
+                  --mdc-ripple-fg-translate-end: 34.0859px, -15px;
+                "
+              ></span>
+            </button>
+            <!---->
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--Carta de Partido-->
 
     <div class="container">
