feat: tab icons

--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -33,11 +33,11 @@
               class="mdc-tab mdc-tab--stacked"
               aria-selected="false"
               tabindex="-1"
-              id="goog_575636264-FIXED-0"
+              id="goog_575636264-FIXED--1"
             >
               <span class="mdc-tab__content">
                 <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->watch_later<!----></i
+                  ><!---->alarm<!----></i
                 >
 
                 <span class="mdc-tab__text-label"><!---->Próximos<!----></span>
@@ -66,11 +66,11 @@
               class="mdc-tab mdc-tab--stacked mdc-tab--active"
               aria-selected="true"
               tabindex="0"
-              id="goog_575636264-FIXED-1"
+              id="goog_575636264-FIXED-0"
             >
               <span class="mdc-tab__content">
                 <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->near_me<!----></i
+                  ><!---->dashboard<!----></i
                 >
 
                 <span class="mdc-tab__text-label"
@@ -100,12 +100,12 @@
               role="tab"
               class="mdc-tab mdc-tab--stacked"
               aria-selected="false"
-              tabindex="-1"
-              id="goog_575636264-FIXED-2"
+              tabindex="1"
+              id="goog_575636264-FIXED-1"
             >
               <span class="mdc-tab__content">
                 <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->favorite<!----></i
+                  ><!---->group<!----></i
                 >
 
                 <span class="mdc-tab__text-label"><!---->Grupo<!----></span>
@@ -133,12 +133,12 @@
               role="tab"
               class="mdc-tab mdc-tab--stacked"
               aria-selected="false"
-              tabindex="-1"
+              tabindex="2"
               id="goog_575636264-FIXED-2"
             >
               <span class="mdc-tab__content">
                 <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->favorite<!----></i
+                  ><!---->shopping_cart<!----></i
                 >
 
                 <span class="mdc-tab__text-label"><!---->Canje<!----></span>
@@ -166,12 +166,12 @@
               role="tab"
               class="mdc-tab mdc-tab--stacked"
               aria-selected="false"
-              tabindex="-1"
-              id="goog_575636264-FIXED-2"
+              tabindex="3"
+              id="goog_575636264-FIXED-3"
             >
               <span class="mdc-tab__content">
                 <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->favorite<!----></i
+                  ><!---->person<!----></i
                 >
 
                 <span class="mdc-tab__text-label"><!---->Perfil<!----></span>
