--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -1,238 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MisGastos</title>
-    <link rel="stylesheet" href="bundle.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </head>
 
-  <body>
-    <!--Tabs-->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MisGastos</title>
+  <link rel="stylesheet" href="bundle.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900"
+    rel="stylesheet" type="text/css" />
+</head>
 
-    <div class="mdc-tab-bar" role="tablist">
-      <div class="mdc-tab-scroller">
-        <div
-          class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
-          style="margin-bottom: 0px"
-        >
-          <div class="mdc-tab-scroller__scroll-content">
-            <!---->
-            <button
-              role="tab"
-              class="mdc-tab mdc-tab--stacked"
-              aria-selected="false"
-              tabindex="-1"
-              id="goog_575636264-FIXED--1"
-            >
-              <span class="mdc-tab__content">
-                <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->alarm<!----></i
-                >
+<body>
+  <!--Tabs-->
 
-                <span class="mdc-tab__text-label"><!---->Próximos<!----></span>
+  <div id="Menu" class="mdc-tab-bar" role="tablist">
+    <div class="mdc-tab-scroller">
+      <div class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll" style="margin-bottom: 0px">
+        <div class="mdc-tab-scroller__scroll-content">
+          <!---->
+          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="-1"
+            id="goog_575636264-FIXED--1">
+            <span class="mdc-tab__content">
+              <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                <!---->alarm
+                <!---->
+              </i>
+
+              <span class="mdc-tab__text-label">
+                <!---->Próximos
+                <!---->
               </span>
+            </span>
 
-              <span class="mdc-tab-indicator">
-                <span
-                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
-                  style=""
-                ></span>
-              </span>
+            <span class="mdc-tab-indicator">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+            </span>
 
-              <span
-                class="mdc-tab__ripple mdc-ripple-upgraded"
-                style="
+            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 91px;
                   --mdc-ripple-fg-scale: 1.96403;
                   --mdc-ripple-fg-translate-start: 75px, -13.5px;
                   --mdc-ripple-fg-translate-end: 30.7969px, -9.5px;
-                "
-              ></span>
-            </button>
-            <!---->
-            <button
-              role="tab"
-              class="mdc-tab mdc-tab--stacked mdc-tab--active"
-              aria-selected="true"
-              tabindex="0"
-              id="goog_575636264-FIXED-0"
-            >
-              <span class="mdc-tab__content">
-                <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->dashboard<!----></i
-                >
+                "></span>
+          </button>
+          <!---->
+          <button role="tab" class="mdc-tab mdc-tab--stacked mdc-tab--active" aria-selected="true" tabindex="0"
+            id="goog_575636264-FIXED-0">
+            <span class="mdc-tab__content">
+              <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                <!---->dashboard
+                <!---->
+              </i>
 
-                <span class="mdc-tab__text-label"
-                  ><!---->Resultados<!----></span
-                >
+              <span class="mdc-tab__text-label">
+                <!---->Resultados
+                <!---->
               </span>
+            </span>
 
-              <span class="mdc-tab-indicator mdc-tab-indicator--active">
-                <span
-                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
-                  style=""
-                ></span>
-              </span>
+            <span class="mdc-tab-indicator mdc-tab-indicator--active">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+            </span>
 
-              <span
-                class="mdc-tab__ripple mdc-ripple-upgraded"
-                style="
+            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 93px;
                   --mdc-ripple-fg-scale: 1.94767;
                   --mdc-ripple-fg-translate-start: -45.5938px, -5.5px;
                   --mdc-ripple-fg-translate-end: 31.125px, -10.5px;
-                "
-              ></span>
-            </button>
-            <!---->
-            <button
-              role="tab"
-              class="mdc-tab mdc-tab--stacked"
-              aria-selected="false"
-              tabindex="1"
-              id="goog_575636264-FIXED-1"
-            >
-              <span class="mdc-tab__content">
-                <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->group<!----></i
-                >
+                "></span>
+          </button>
+          <!---->
+          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="1"
+            id="goog_575636264-FIXED-1">
+            <span class="mdc-tab__content">
+              <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                <!---->group
+                <!---->
+              </i>
 
-                <span class="mdc-tab__text-label"><!---->Grupo<!----></span>
+              <span class="mdc-tab__text-label">
+                <!---->Grupo
+                <!---->
               </span>
+            </span>
 
-              <span class="mdc-tab-indicator">
-                <span
-                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
-                  style=""
-                ></span>
-              </span>
+            <span class="mdc-tab-indicator">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+            </span>
 
-              <span
-                class="mdc-tab__ripple mdc-ripple-upgraded"
-                style="
+            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 102px;
                   --mdc-ripple-fg-scale: 1.90958;
                   --mdc-ripple-fg-translate-start: -9.34375px, -11px;
                   --mdc-ripple-fg-translate-end: 34.0859px, -15px;
-                "
-              ></span>
-            </button>
-            <!---->
-            <button
-              role="tab"
-              class="mdc-tab mdc-tab--stacked"
-              aria-selected="false"
-              tabindex="2"
-              id="goog_575636264-FIXED-2"
-            >
-              <span class="mdc-tab__content">
-                <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->shopping_cart<!----></i
-                >
+                "></span>
+          </button>
+          <!---->
+          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="2"
+            id="goog_575636264-FIXED-2">
+            <span class="mdc-tab__content">
+              <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                <!---->shopping_cart
+                <!---->
+              </i>
 
-                <span class="mdc-tab__text-label"><!---->Canje<!----></span>
+              <span class="mdc-tab__text-label">
+                <!---->Canje
+                <!---->
               </span>
+            </span>
 
-              <span class="mdc-tab-indicator">
-                <span
-                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
-                  style=""
-                ></span>
-              </span>
+            <span class="mdc-tab-indicator">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+            </span>
 
-              <span
-                class="mdc-tab__ripple mdc-ripple-upgraded"
-                style="
+            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 102px;
                   --mdc-ripple-fg-scale: 1.90958;
                   --mdc-ripple-fg-translate-start: -9.34375px, -11px;
                   --mdc-ripple-fg-translate-end: 34.0859px, -15px;
-                "
-              ></span>
-            </button>
-            <!---->
-            <button
-              role="tab"
-              class="mdc-tab mdc-tab--stacked"
-              aria-selected="false"
-              tabindex="3"
-              id="goog_575636264-FIXED-3"
-            >
-              <span class="mdc-tab__content">
-                <i aria-hidden="true" class="material-icons mdc-tab__icon"
-                  ><!---->person<!----></i
-                >
+                "></span>
+          </button>
+          <!---->
+          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="3"
+            id="goog_575636264-FIXED-3">
+            <span class="mdc-tab__content">
+              <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                <!---->person
+                <!---->
+              </i>
 
-                <span class="mdc-tab__text-label"><!---->Perfil<!----></span>
+              <span class="mdc-tab__text-label">
+                <!---->Perfil
+                <!---->
               </span>
+            </span>
 
-              <span class="mdc-tab-indicator">
-                <span
-                  class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
-                  style=""
-                ></span>
-              </span>
+            <span class="mdc-tab-indicator">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+            </span>
 
-              <span
-                class="mdc-tab__ripple mdc-ripple-upgraded"
-                style="
+            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 102px;
                   --mdc-ripple-fg-scale: 1.90958;
                   --mdc-ripple-fg-translate-start: -9.34375px, -11px;
                   --mdc-ripple-fg-translate-end: 34.0859px, -15px;
-                "
-              ></span>
+                "></span>
+          </button>
+          <!---->
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <section id="Pantalla">
+    <section id="Proximos" class='show'>
+      <!--Carta de Partido-->
+
+      <div class="container">
+        <div class="mdc-card mdc-card--outlined">
+          <div class="mdc-card-wrapper__text-section">
+            <div class="demo-card__title"> Uruguay - Ghana</div>
+            <div class="demo-card__subhead">Martes 25 de diciembre</div>
+          </div>
+          <div class="mdc-card__actions">
+            <button class="mdc-button mdc-button--raised mdc-button--leading">
+              <span class="mdc-button__ripple"></span>
+              <i class="material-icons mdc-button__icon" aria-hidden="true">edit</i>
+              <span class="mdc-button__label">Ingresar predicción</span>
             </button>
-            <!---->
+          </div>
+        </div>
+        <div class="mdc-card mdc-card--outlined">
+          <div class="mdc-card-wrapper__text-section">
+            <div class="demo-card__title"> Uruguay - Ghana</div>
+            <div class="demo-card__subhead">Martes 25 de diciembre</div>
+          </div>
+          <div class="mdc-card__actions">
+            <button class="mdc-button mdc-button--raised mdc-button--leading">
+              <span class="mdc-button__ripple"></span>
+              <i class="material-icons mdc-button__icon" aria-hidden="true">edit</i>
+              <span class="mdc-button__label">Ingresar predicción</span>
+            </button>
           </div>
         </div>
       </div>
-    </div>
+    </section>
+    <section id="Resultados" class='hide'>
+      Resultados
+    </section>
+    <section id="Grupo" class='hide'>
+      Grupo
+    </section>
+    <section id="Canje" class='hide'>
+      Canje
+    </section>
+    <section id="Perfil" class='hide'>
+      Perfil
+    </section>
+  </section>
 
-    <!--Carta de Partido-->
+</body>
 
-    <div class="container">
-      <div class="mdc-card mdc-card--outlined">
-        <div class="mdc-card-wrapper__text-section">
-          <div class="demo-card__title">🐳 Uruguay - Ghana</div>
-          <div class="demo-card__subhead">Martes 25 de diciembre</div>
-        </div>
-        <div class="mdc-card__actions">
-          <button class="mdc-button mdc-button--raised mdc-button--leading">
-            <span class="mdc-button__ripple"></span>
-            <i class="material-icons mdc-button__icon" aria-hidden="true"
-              >edit</i
-            >
-            <span class="mdc-button__label">Ingresar predicción</span>
-          </button>
-        </div>
-      </div>
-      <div class="mdc-card mdc-card--outlined">
-        <div class="mdc-card-wrapper__text-section">
-          <div class="demo-card__title">🐳 Uruguay - Ghana</div>
-          <div class="demo-card__subhead">Martes 25 de diciembre</div>
-        </div>
-        <div class="mdc-card__actions">
-          <button class="mdc-button mdc-button--raised mdc-button--leading">
-            <span class="mdc-button__ripple"></span>
-            <i class="material-icons mdc-button__icon" aria-hidden="true"
-              >edit</i
-            >
-            <span class="mdc-button__label">Ingresar predicción</span>
-          </button>
-        </div>
-      </div>
-    </div>
-  </body>
 </html>
