feat: top bar con Titulo

--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -13,151 +13,162 @@
     rel="stylesheet" type="text/css" />
 </head>
 
+
 <body>
-  <!--Tabs-->
+  <header class="mdc-top-app-bar">
+    <div class="mdc-top-app-bar__row">
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+        <div class="material-icons" aria-label="Close">circle</div>
+        <span class="mdc-top-app-bar__title">Mundial</span>
+      </section>
+    </div>
+  </header>
+  <main class="mdc-top-app-bar--fixed-adjust">
 
-  <div id="Menu" class="mdc-tab-bar" role="tablist">
-    <div class="mdc-tab-scroller">
-      <div class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll" style="margin-bottom: 0px">
-        <div class="mdc-tab-scroller__scroll-content">
-          <!---->
-          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="-1"
-            id="goog_575636264-FIXED--1">
-            <span class="mdc-tab__content">
-              <i aria-hidden="true" class="material-icons mdc-tab__icon">
-                <!---->alarm
-                <!---->
-              </i>
+    <!--Tabs-->
 
-              <span class="mdc-tab__text-label">
-                <!---->Próximos
-                <!---->
+    <div id="Menu" class="mdc-tab-bar" role="tablist">
+      <div class="mdc-tab-scroller">
+        <div class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll" style="margin-bottom: 0px">
+          <div class="mdc-tab-scroller__scroll-content">
+            <!---->
+            <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="-1"
+              id="goog_575636264-FIXED--1">
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                  <!---->alarm
+                  <!---->
+                </i>
+
+                <span class="mdc-tab__text-label">
+                  <!---->Próximos
+                  <!---->
+                </span>
               </span>
-            </span>
 
-            <span class="mdc-tab-indicator">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
-            </span>
+              <span class="mdc-tab-indicator">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+              </span>
 
-            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
+              <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 91px;
                   --mdc-ripple-fg-scale: 1.96403;
                   --mdc-ripple-fg-translate-start: 75px, -13.5px;
                   --mdc-ripple-fg-translate-end: 30.7969px, -9.5px;
                 "></span>
-          </button>
-          <!---->
-          <button role="tab" class="mdc-tab mdc-tab--stacked mdc-tab--active" aria-selected="true" tabindex="0"
-            id="goog_575636264-FIXED-0">
-            <span class="mdc-tab__content">
-              <i aria-hidden="true" class="material-icons mdc-tab__icon">
-                <!---->dashboard
-                <!---->
-              </i>
+            </button>
+            <!---->
+            <button role="tab" class="mdc-tab mdc-tab--stacked mdc-tab--active" aria-selected="true" tabindex="0"
+              id="goog_575636264-FIXED-0">
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                  <!---->dashboard
+                  <!---->
+                </i>
 
-              <span class="mdc-tab__text-label">
-                <!---->Resultados
-                <!---->
+                <span class="mdc-tab__text-label">
+                  <!---->Resultados
+                  <!---->
+                </span>
               </span>
-            </span>
 
-            <span class="mdc-tab-indicator mdc-tab-indicator--active">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
-            </span>
+              <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+              </span>
 
-            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
+              <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 93px;
                   --mdc-ripple-fg-scale: 1.94767;
                   --mdc-ripple-fg-translate-start: -45.5938px, -5.5px;
                   --mdc-ripple-fg-translate-end: 31.125px, -10.5px;
                 "></span>
-          </button>
-          <!---->
-          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="1"
-            id="goog_575636264-FIXED-1">
-            <span class="mdc-tab__content">
-              <i aria-hidden="true" class="material-icons mdc-tab__icon">
-                <!---->group
-                <!---->
-              </i>
+            </button>
+            <!---->
+            <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="1"
+              id="goog_575636264-FIXED-1">
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                  <!---->group
+                  <!---->
+                </i>
 
-              <span class="mdc-tab__text-label">
-                <!---->Grupo
-                <!---->
+                <span class="mdc-tab__text-label">
+                  <!---->Grupo
+                  <!---->
+                </span>
               </span>
-            </span>
 
-            <span class="mdc-tab-indicator">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
-            </span>
+              <span class="mdc-tab-indicator">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+              </span>
 
-            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
+              <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 102px;
                   --mdc-ripple-fg-scale: 1.90958;
                   --mdc-ripple-fg-translate-start: -9.34375px, -11px;
                   --mdc-ripple-fg-translate-end: 34.0859px, -15px;
                 "></span>
-          </button>
-          <!---->
-          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="2"
-            id="goog_575636264-FIXED-2">
-            <span class="mdc-tab__content">
-              <i aria-hidden="true" class="material-icons mdc-tab__icon">
-                <!---->shopping_cart
-                <!---->
-              </i>
+            </button>
+            <!---->
+            <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="2"
+              id="goog_575636264-FIXED-2">
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                  <!---->shopping_cart
+                  <!---->
+                </i>
 
-              <span class="mdc-tab__text-label">
-                <!---->Canje
-                <!---->
+                <span class="mdc-tab__text-label">
+                  <!---->Canje
+                  <!---->
+                </span>
               </span>
-            </span>
 
-            <span class="mdc-tab-indicator">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
-            </span>
+              <span class="mdc-tab-indicator">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+              </span>
 
-            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
+              <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 102px;
                   --mdc-ripple-fg-scale: 1.90958;
                   --mdc-ripple-fg-translate-start: -9.34375px, -11px;
                   --mdc-ripple-fg-translate-end: 34.0859px, -15px;
                 "></span>
-          </button>
-          <!---->
-          <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="3"
-            id="goog_575636264-FIXED-3">
-            <span class="mdc-tab__content">
-              <i aria-hidden="true" class="material-icons mdc-tab__icon">
-                <!---->person
-                <!---->
-              </i>
+            </button>
+            <!---->
+            <button role="tab" class="mdc-tab mdc-tab--stacked" aria-selected="false" tabindex="3"
+              id="goog_575636264-FIXED-3">
+              <span class="mdc-tab__content">
+                <i aria-hidden="true" class="material-icons mdc-tab__icon">
+                  <!---->person
+                  <!---->
+                </i>
 
-              <span class="mdc-tab__text-label">
-                <!---->Perfil
-                <!---->
+                <span class="mdc-tab__text-label">
+                  <!---->Perfil
+                  <!---->
+                </span>
               </span>
-            </span>
 
-            <span class="mdc-tab-indicator">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
-            </span>
+              <span class="mdc-tab-indicator">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
+              </span>
 
-            <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
+              <span class="mdc-tab__ripple mdc-ripple-upgraded" style="
                   --mdc-ripple-fg-size: 102px;
                   --mdc-ripple-fg-scale: 1.90958;
                   --mdc-ripple-fg-translate-start: -9.34375px, -11px;
                   --mdc-ripple-fg-translate-end: 34.0859px, -15px;
                 "></span>
-          </button>
-          <!---->
+            </button>
+            <!---->
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
 
-  <!--
+    <!--
 La idea base es tener un gran section pantalla, este se excluye de
 la tab navigation bar de arriba (que despues debemos mover abajo) 
 
@@ -167,12 +178,12 @@ Se le aplica una clase scss para mostrarlo o no
 Y dentro de cada clase tiene un div clase containerName
 donde se mostrara de forma dinamica con js los elementos
 -->
-  <section id="Pantalla">
-    <section id="Proximos" class='show'>
-      <!--Carta de Partido-->
+    <section id="Pantalla">
+      <section id="Proximos" class='show'>
+        <!--Carta de Partido-->
 
-      <div class="containerProximos">
-        <!--
+        <div class="containerProximos">
+          <!--
         <div class="mdc-card mdc-card--outlined">
           <div class="mdc-card-wrapper__text-section">
             <div class="demo-card__title"> Uruguay - Ghana</div>
@@ -200,22 +211,22 @@ donde se mostrara de forma dinamica con js los elementos
           </div>
         </div>
 -->
-      </div>
+        </div>
+      </section>
+      <section id="Resultados" class='hide'>
+        Resultados
+      </section>
+      <section id="Grupo" class='hide'>
+        Grupo
+      </section>
+      <section id="Canje" class='hide'>
+        Canje
+      </section>
+      <section id="Perfil" class='hide'>
+        Perfil
+      </section>
     </section>
-    <section id="Resultados" class='hide'>
-      Resultados
-    </section>
-    <section id="Grupo" class='hide'>
-      Grupo
-    </section>
-    <section id="Canje" class='hide'>
-      Canje
-    </section>
-    <section id="Perfil" class='hide'>
-      Perfil
-    </section>
-  </section>
-
+  </main>
 </body>
 
 </html>
