--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -27,7 +27,7 @@
 
     <!--Tabs-->
 
-    <div id="Menu" class="mdc-tab-bar" role="tablist">
+    <div id="Menu" class="footer mdc-tab-bar" role="tablist">
       <div class="mdc-tab-scroller">
         <div class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll" style="margin-bottom: 0px">
           <div class="mdc-tab-scroller__scroll-content">
