--- a/src/interfaz/src/index.html
+++ b/src/interfaz/src/index.html
@@ -215,6 +215,9 @@ donde se mostrara de forma dinamica con js los elementos
       </section>
       <section id="Resultados" class='hide'>
         Resultados
+        <div class="containerResultados">
+
+        </div>
       </section>
       <section id="Grupo" class='hide'>
         Grupo
